// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TUI inline tool wrapping snapshots consecutive grep, glob, and read rows at a narrow width 1`] = `
"   ✱ Grep "OTTLI.*DB|database|sqlite|drizzle|dev.*db|data.
     *dir|xdg|APPDATA" in packages/ottili-coder/src (151 matches)
   ✱ Glob "**/*db*" in packages/ottili-coder (6 matches)
   → Read packages/ottili-coder/src/storage/db.ts [offset=1, limit=130]
   → Read packages/ottili-coder/src/index.ts [offset=1, limit=100]
   ✱ Grep "export const
     OTTILI_CODER_DB|OTTILI_CODER_DB|OTTILI_CODER_DEV|Global\\.Path\\.
     data|data =" in packages/ottili-coder/src (115 matches)"
`;

exports[`TUI inline tool wrapping snapshots expanded tool errors under the tool text 1`] = `
"   ✱ Grep "OTTLI.*DB|database|sqlite|drizzle|dev.*db|data.
     *dir|xdg|APPDATA" in packages/ottili-coder/src (151 matches)
   ✱ Glob "**/*db*" in packages/ottili-coder (6 matches)
   → Read packages/ottili-coder/src/storage/db.ts [offset=1, limit=130]
   → Read packages/ottili-coder/src/index.ts [offset=1, limit=100]
     No LSP server available for this file type.
   ✱ Grep "export const
     OTTILI_CODER_DB|OTTILI_CODER_DB|OTTILI_CODER_DEV|Global\\.Path\\.
     data|data =" in packages/ottili-coder/src (115 matches)"
`;

exports[`TUI inline tool wrapping keeps separation after a shell output block 1`] = `
"

  # List files

  $ ls

  file.ts

   ✱ Grep "OTTLI.*DB|database|sqlite|drizzle|dev.*db|data.
     *dir|xdg|APPDATA" in packages/ottili-coder/src (151 matches)
   ✱ Glob "**/*db*" in packages/ottili-coder (6 matches)
   → Read packages/ottili-coder/src/storage/db.ts [offset=1, limit=130]
   → Read packages/ottili-coder/src/index.ts [offset=1, limit=100]
   ✱ Grep "export const
     OTTILI_CODER_DB|OTTILI_CODER_DB|OTTILI_CODER_DEV|Global\\.Path\\.
     data|data =" in packages/ottili-coder/src (115 matches)"
`;

exports[`TUI inline tool wrapping keeps separation after a padded user message 1`] = `
"Check whether the next tool remains separated.

   ✱ Grep "OTTLI.*DB|database|sqlite|drizzle|dev.*db|data.
     *dir|xdg|APPDATA" in packages/ottili-coder/src (151 matches)
   ✱ Glob "**/*db*" in packages/ottili-coder (6 matches)
   → Read packages/ottili-coder/src/storage/db.ts [offset=1, limit=130]
   → Read packages/ottili-coder/src/index.ts [offset=1, limit=100]
   ✱ Grep "export const
     OTTILI_CODER_DB|OTTILI_CODER_DB|OTTILI_CODER_DEV|Global\\.Path\\.
     data|data =" in packages/ottili-coder/src (115 matches)"
`;